[gd_scene load_steps=8 format=3 uid="uid://dtdnidxcdgbwa"]

[ext_resource type="Script" path="res://scripts/quick_zombie.gd" id="1_mymxc"]
[ext_resource type="Texture2D" uid="uid://b3hf2jtaqb3q4" path="res://textures/quick_zombie.png" id="4_b1jr7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pwj3v"]
light_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_pdxxf"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_12256"]
radius = 21.0238

[sub_resource type="Animation" id="Animation_jyft3"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.06, 0.06)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2yx1h"]
_data = {
"spawn": SubResource("Animation_jyft3")
}

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 32771
script = ExtResource("1_mymxc")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
material = SubResource("CanvasItemMaterial_pwj3v")
position = Vector2(4.76837e-07, -2.84217e-14)
rotation = 1.57079
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_b1jr7")
region_rect = Rect2(-0.780212, -4.24907, 676.967, 692.529)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("CircleShape2D_pdxxf")
debug_color = Color(0.992157, 0, 0.278431, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
neighbor_distance = 40.0
max_neighbors = 15

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DamageCollision" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_12256")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2yx1h")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
